[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/ui/myCanvas.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ui/ControlButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Imgs/gear.png" type="Texture" id=3]
[ext_resource path="res://Imgs/gear_frame.png" type="Texture" id=4]
[ext_resource path="res://Scenes/ui/Clock.gd" type="Script" id=5]
[ext_resource path="res://Imgs/clock.png" type="Texture" id=6]
[ext_resource path="res://Imgs/clock_frame.png" type="Texture" id=7]
[ext_resource path="res://Imgs/clock_arrow.png" type="Texture" id=8]
[ext_resource path="res://Imgs/Qligth.png" type="Texture" id=9]
[ext_resource path="res://Scenes/ui/Act_mode.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/ui/Resources.tscn" type="PackedScene" id=11]
[ext_resource path="res://fonts/Zpix.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scenes/ui/BuildMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Imgs/item_fon.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 12 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "change_day"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 2.6, 2.7, 2.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.66851 ), Color( 1, 1, 1, 0.524863 ), Color( 1, 1, 1, 0.259686 ), Color( 1, 1, 1, 0.0939216 ), Color( 1, 1, 1, 0.0221176 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[node name="myCanvas" type="CanvasLayer"]

pause_mode = 1
editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Pause" parent="." index="0" instance=ExtResource( 2 )]

margin_left = 923.0
margin_top = 5.0
margin_right = 955.0
margin_bottom = 37.0
texture = ExtResource( 3 )
texture_selected = ExtResource( 4 )

[node name="Clock" type="Control" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 456.0
margin_top = 24.0
margin_right = 496.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Clock" index="0"]

texture = ExtResource( 6 )

[node name="frame" type="Sprite" parent="Clock" index="1"]

position = Vector2( -0.125, -2.875 )
texture = ExtResource( 7 )

[node name="Arrow" type="Sprite" parent="Clock" index="2"]

position = Vector2( 0.34375, 1.84375 )
texture = ExtResource( 8 )
offset = Vector2( 0.03125, -6.15625 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="Clock" index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Sun" type="Light2D" parent="." index="2"]

position = Vector2( 483.75, 322 )
scale = Vector2( 30.25, 20.25 )
enabled = true
editor_only = false
texture = ExtResource( 9 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.1
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Act_mode" parent="." index="3" instance=ExtResource( 10 )]

margin_left = 1.0
margin_top = 1.0
margin_right = 33.0
margin_bottom = 33.0

[node name="Resources" parent="." index="4" instance=ExtResource( 11 )]

margin_left = 516.0
margin_top = 1.0
margin_right = 748.0
margin_bottom = 49.0

[node name="Alert" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 310.0
margin_top = 68.0
margin_right = 596.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="animation" type="AnimationPlayer" parent="Alert" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/change_day = SubResource( 2 )
blend_times = [  ]

[node name="BuildMenu" parent="." index="6" instance=ExtResource( 13 )]

visible = false
margin_left = 34.0
margin_top = 1.0
margin_right = 194.0
margin_bottom = 51.0
_sections_unfolded = [ "Rect" ]

[node name="Active_item" type="Control" parent="." index="7"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 33.0
margin_right = 33.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="fon" type="Sprite" parent="Active_item" index="0"]

position = Vector2( 16, 16 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]

[node name="Item" type="Sprite" parent="Active_item" index="1"]

position = Vector2( 16, 16 )
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="Pause" to="." method="_on_ControlButton_pressed"]

[connection signal="timeout" from="Clock/Timer" to="Clock" method="_on_Timer_timeout"]

[connection signal="pressed" from="Act_mode" to="." method="_on_Act_mode_pressed"]


